--- a/android/app/src/main/res/layout/activity_signup.xml
+++ b/android/app/src/main/res/layout/activity_signup.xml
@@ -303,23 +303,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="35dp"
             app:layout_constraintTop_toBottomOf="@id/rowBloodGender"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <com.google.android.material.button.MaterialButton
+            <Button
                 android:id="@+id/btnOk"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
                 android:text="확인"
+                android:background="@drawable/rounded_btn"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
-                app:backgroundTint="#4C6FFF"
-                app:cornerRadius="12dp"/>
+                app:backgroundTint="@color/blue_navy" />
 
-            <com.google.android.material.button.MaterialButton
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnCancel"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
@@ -327,8 +327,7 @@
                 android:layout_marginStart="12dp"
                 android:text="취소"
                 android:textAllCaps="false"
-                app:strokeWidth="1dp"
-                app:cornerRadius="12dp"/>
+                android:background="@drawable/rounded_btn"/>
         </LinearLayout>
 
 
