--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -45,11 +45,12 @@
             android:id="@+id/insertId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
+            app:boxBackgroundMode="outline"
+            app:hintEnabled="false"
             app:layout_constraintTop_toBottomOf="@id/textId"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:boxCornerRadiusTopStart="12dp"
             app:boxCornerRadiusTopEnd="12dp"
             app:boxCornerRadiusBottomStart="12dp"
@@ -84,11 +85,12 @@
             android:id="@+id/insertPw"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/textPw"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-
+            app:boxBackgroundMode="outline"
+            app:hintEnabled="false"
             app:endIconMode="password_toggle"
             app:boxCornerRadiusTopStart="12dp"
             app:boxCornerRadiusTopEnd="12dp"
@@ -108,14 +110,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- 자동 로그인 -->
-        <CheckBox
+        <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/cbAuto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="자동 로그인"
             android:textSize="12sp"
             android:layout_marginTop="8dp"
-            android:buttonTint="@color/blue_gray"
+            app:buttonTint="@color/blue_gray"
             app:layout_constraintTop_toBottomOf="@id/insertPw"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -177,7 +179,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/Signup"
             android:layout_width="0dp"
-            android:layout_height="52dp"
+            android:layout_height="45dp"
             android:layout_marginTop="12dp"
             android:text="회원가입"
             android:textSize="15sp"
