--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -24,9 +24,9 @@
             <!-- 프로필 이미지 원 -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_profile_image"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                app:cardCornerRadius="60dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                app:cardCornerRadius="100dp"
                 app:cardElevation="0dp"
                 android:layout_centerHorizontal="true">
 
@@ -41,22 +41,17 @@
             </androidx.cardview.widget.CardView>
 
             <!-- ✅ 수정: 프로필 사진 우하단에 겹쳐서 표시 -->
-            <com.google.android.material.button.MaterialButton
+            <ImageButton
                 android:id="@+id/btn_edit_profile_icon"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_below="@id/card_profile_image"
-                android:layout_alignEnd="@id/card_profile_image"
-                android:layout_marginTop="-18dp"
-                android:layout_marginEnd="4dp"
-                android:contentDescription="프로필 사진 수정"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignEnd="@+id/card_profile_image"
+                android:layout_alignBottom="@+id/card_profile_image"
+                android:layout_marginBottom="3dp"
+                android:layout_marginEnd="-5dp"
+                android:background="@drawable/btn_edit_picture"
                 android:elevation="6dp"
-                app:backgroundTint="@android:color/white"
-                app:cornerRadius="20dp"
-                app:icon="@drawable/ic_edit_pencil"
-                app:iconSize="20dp"
-                app:iconTint="@android:color/black"/>
+                android:src="@drawable/ic_edit"/>
 
             <!-- 사용자 이름 -->
             <TextView
@@ -77,9 +72,9 @@
                 android:id="@+id/btn_settings"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_alignTop="@+id/card_profile_image"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_margin="8dp"
+                android:layout_marginEnd="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="설정"
                 android:padding="8dp"
