--- a/android/app/src/main/res/layout/activity_change_pass.xml
+++ b/android/app/src/main/res/layout/activity_change_pass.xml
@@ -6,22 +6,38 @@
     android:id="@+id/main_changepw"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangePassActivity">
+    tools:context=".ChangePassActivity"
+    android:padding="44dp">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="비밀번호 변경"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/tilCurrent" android:layout_width="0dp" android:layout_height="wrap_content"
-    app:endIconMode="password_toggle"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
+        android:id="@+id/tilCurrent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:endIconMode="password_toggle"
+        android:layout_marginTop="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
- <com.google.android.material.textfield.TextInputEditText
-     android:id="@+id/etCurrent"
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:hint="현재 비밀번호"
-     android:inputType="textPassword"/>
- </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etCurrent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_edittext"
+            android:hint="현재 비밀번호"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/tilNew"
@@ -37,6 +53,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="새 비밀번호(영문+숫자 8~20자)"
+    android:background="@drawable/login_edittext"
     android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -55,22 +72,41 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="새 비밀번호 확인"
+    android:background="@drawable/login_edittext"
     android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
- <com.google.android.material.button.MaterialButton
-     android:id="@+id/btnChange" android:layout_width="0dp" android:layout_height="wrap_content"
-     android:text="변경"
-     app:layout_constraintTop_toBottomOf="@id/tilConfirm" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/tilConfirm">
 
-<com.google.android.material.button.MaterialButton
-    android:id="@+id/btnCancel"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    style="?attr/materialButtonOutlinedStyle"
-    android:text="취소"
-    app:layout_constraintTop_toBottomOf="@id/btnChange"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnChange"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_btn"
+            android:backgroundTint="@color/blue_navy"
+            android:gravity="center"
+            android:text="변경하기"
+            android:textColor="@color/white"
+            android:textSize="15sp" />
+
+        <Space
+            android:layout_width="15dp"
+            android:layout_height="10dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnCancel"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_btn"
+            android:text="취소"
+            android:textColor="@color/blue_navy" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
