--- a/android/app/src/main/res/layout/activity_settings.xml
+++ b/android/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,19 @@
     android:background="@color/white"
     tools:context=".SettingsActivity">
 
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:background="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -41,9 +53,9 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_btn"
             android:backgroundTint="@color/blue_navy"
+            android:text="비밀번호 변경"
             android:textColor="@color/white"
-            android:textSize="15sp"
-            android:text="비밀번호 변경" />
+            android:textSize="15sp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnDeleteAccount"
@@ -52,9 +64,9 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/rounded_btn"
             android:backgroundTint="@color/blue_navy"
+            android:text="회원 탈퇴"
             android:textColor="@color/white"
-            android:textSize="15sp"
-            android:text="회원 탈퇴" />
+            android:textSize="15sp" />
 
         <View
             android:layout_width="match_parent"
@@ -67,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_btn"
-            android:textColor="@color/blue_navy"
-            android:text="로그아웃" />
+            android:text="로그아웃"
+            android:textColor="@color/blue_navy" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
