--- a/android/app/src/main/res/layout/fragment_hospital.xml
+++ b/android/app/src/main/res/layout/fragment_hospital.xml
@@ -16,14 +16,14 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="20dp" />
 
     <!-- 구분선 -->
     <View
         android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="#000000"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="1dp"
+        android:background="@color/blue_gray"
+        android:layout_marginBottom="20dp"/>
 
     <!-- RecyclerView: weight로 남은 공간 모두 차지 -->
     <androidx.recyclerview.widget.RecyclerView
