--- a/android/app/src/main/res/layout/item_hospital.xml
+++ b/android/app/src/main/res/layout/item_hospital.xml
@@ -13,14 +13,14 @@
         android:id="@+id/text_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="병원 이름"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:ellipsize="end"
-        android:singleLine="true"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_distance"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 거리 km -->
     <TextView
@@ -29,46 +29,48 @@
         android:layout_height="wrap_content"
         android:text="0.0 km"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/text_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/text_name"/>
+        app:layout_constraintTop_toTopOf="@id/text_name" />
 
     <!-- 주소 -->
     <TextView
         android:id="@+id/text_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="주소"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/layout_congestion"
-        app:layout_constraintTop_toBottomOf="@id/text_name"
-        android:ellipsize="end"
-        android:singleLine="true"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_name" />
 
     <!-- 혼잡도 표시 -->
     <LinearLayout
         android:id="@+id/layout_congestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@id/text_address"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/text_address"
-        app:layout_constraintBottom_toBottomOf="@id/text_address">
+        app:layout_constraintTop_toTopOf="@id/text_address">
 
         <View
             android:id="@+id/view_congestion_dot"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_marginEnd="6dp"
-            android:background="@color/lime_green"/>
+            android:background="@color/lime_green" />
 
         <TextView
             android:id="@+id/text_congestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="원활"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
     <!-- 전화번호 -->
@@ -76,10 +78,10 @@
         android:id="@+id/text_phone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:text="전화번호"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_address"
-        android:layout_marginTop="2dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_address" />
 </androidx.constraintlayout.widget.ConstraintLayout>
