--- a/android/app/src/main/res/layout/fragment_category.xml
+++ b/android/app/src/main/res/layout/fragment_category.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:paddingTop="80dp"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/tv_title"
