--- a/android/app/src/main/res/layout/fragment_hospital.xml
+++ b/android/app/src/main/res/layout/fragment_hospital.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="80dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:background="@color/white">
+
+    <LinearLayout
+        android:id="@+id/linearHospital"
+        android:paddingTop="80dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:visibility="gone">
 
     <!-- 타이틀 -->
     <TextView
@@ -33,4 +43,5 @@
         android:layout_weight="1"
         android:clipToPadding="false"
         android:paddingBottom="16dp" />
+    </LinearLayout>
 </LinearLayout>
